--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json && node server.js",
-    "start-auth": "node server.js"
+    "start-auth": "json-server --watch db.json && node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
